<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_option"
        android:title="@string/top_5"
        app:showAsAction="always"
        android:icon="@drawable/image_top"/>

    <item android:id="@+id/contacto"
        android:orderInCategory="1"
        android:title="@string/contac"/>

    <item android:id="@+id/acerca"
        android:orderInCategory="2"
        android:title="@string/acerca"/>

    <item android:id="@+id/config"
        android:orderInCategory="3"
        android:title="@string/config_title"/>

    <item android:id="@+id/notifications"
        android:orderInCategory="4"
        android:title="@string/recibir_notificaciones"/>

</menu>